# hasse

./: .gitignore  README.md  hasse.cabal  stack.yaml
app/: Main.hs
src/: Hasse.hs
