name:                hasse
version:             0.1.0.0
homepage:            https://github.com/githubuser/hasse#readme
author:              Matthew Piziak
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hasse
  build-depends:       base >= 4.7 && < 5
                     , colour
                     , diagrams-lib
                     , diagrams-svg
                     , enumerable
                     , lattices
                     , protolude
                     , HaskellForMaths
                     , multiset
                     , containers
  default-language:    Haskell2010

executable hasse-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hasse
                     , bifunctors
                     , colour
                     , diagrams-lib
                     , diagrams-svg
                     , enumerable
                     , lattices
                     , protolude
                     , HaskellForMaths
                     , multiset
                     , containers
                     , hgal
  default-language:    Haskell2010

test-suite hasse-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hasse
